# sentinel-core

./: .gitignore  DocsWatcher.sh  Doxyfile  README.md
codes/Cortx/: Cortx.hpp
codes/Cortx/Processing/: Detector_coco_v4.cpp
codes/Eys/: Session.hpp  futils.hpp
codes/LookingAt/API/: package-lock.json
codes/LookingAt/API/public/: index.html
codes/LookingAt/view/: README.md  package-lock.json  package.json
docs/diagrams/: 00_Mermeid.md  01_Complete_Fluxogram.md  02_Streaming.md
docs/diagrams/Cerebellum/: 01_State_Machine.mmd
docs/diagrams/Cortx/: 01_Cortx.mmd  02_Cortx.mmd
docs/diagrams/Eys/: 01_.mmd  02_.mmd  03_.mmd
docs/diagrams/Think/FrontalLobe/: 01_server.mmd
docs/doxygen/: main_page.doxy
docs/doxygen/doxygen/html/: 01__GetStarted_8md.html  Cortx_2Cortx_8cpp.html  Cortx_2Cortx_8hpp.html  Cortx_2Cortx_8hpp_source.html  Cortx_2main_8cpp.html  Cortx_2main_8cpp.js  Cortx_8cpp.html  Cortx_8hpp.html  Cortx_8hpp.js  Cortx_8hpp_source.html  Cortx_8py.html  Cortx_8py.js  Detector_8cpp.html  Detector_8hpp.html  Detector_8hpp.js  Detector_8hpp_source.html  Eys_2Cortx_8cpp.html  Eys_2Cortx_8cpp.js  Eys_2Cortx_8hpp.html  Eys_2Cortx_8hpp_source.html  Eys_2main_8cpp.html  Eys_2main_8cpp.js  Eys_8cpp.html  Eys_8cpp.js  Eys_8hpp.html  Eys_8hpp.js  Eys_8hpp_source.html  README_8md.html  Session_8cpp.html  Session_8cpp.js  Session_8hpp.html  Session_8hpp.js  Session_8hpp_source.html  WakeUP_8cpp.html  WakeUP_8hpp.html  WakeUP_8hpp.js  WakeUP_8hpp_source.html  annotated.html  annotated_dup.js  classCortx-members.html  (+59 more)
docs/doxygen/doxygen/latex/: 01__GetStarted_8md.tex  Cortx_2Cortx_8cpp.tex  Cortx_2Cortx_8hpp.tex  Cortx_2main_8cpp.tex  Cortx_8cpp.tex  Cortx_8hpp.tex  Cortx_8hpp_source.tex  Cortx_8py.tex  Detector_8cpp.tex  Detector_8hpp.tex  Detector_8hpp_source.tex  Eys_2Cortx_8cpp.tex  Eys_2Cortx_8hpp.tex  Eys_2main_8cpp.tex  Eys_8cpp.tex  Eys_8hpp.tex  Eys_8hpp_source.tex  README_8md.tex  Session_8cpp.tex  Session_8hpp.tex  Session_8hpp_source.tex  WakeUP_8cpp.tex  WakeUP_8hpp.tex  WakeUP_8hpp_source.tex  annotated.tex  classCortx.eps  classCortx.tex  classDetector.tex  classEys.eps  classEys.tex  classSession.tex  classWakeUP.tex  dir_359d2bec989c9a8deeeb9aee335c1c76.tex  dir_530ef000231ec771096484ebea034701.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7cd19644dc59781f4bcb5917b3510575.tex  dir_81e789df5dcbc139fd160ca499e013fe.tex  dir_b9f0c814eeca26d82d8693c1ccf69e43.tex  dir_e9b32441cf9ea0f713f13025e64fe93e.tex  dir_eb6d0204f3cbfe33d6ef8fd214030aea.tex  (+12 more)
docs/opencv/: Comp_Confs.md
src/Cortx/: CMakeLists.txt  Cortx.cpp  Cortx.py  README_CPP.md  README_PY.md  main.cpp
src/Cortx/Processing/: Auth.py  Coco_Yolov4.hpp  Detector.cpp  Detector.hpp  TemporalLobe.py
src/Eys/: CMakeLists.txt  Eys.cpp  Eys.hpp  README.md  Session.cpp  Session.hpp  WakeUP.cpp  WakeUP.hpp  main.cpp
src/Eys/build_arm/: Eys
src/Eys/build_pc/: Eys_x64  Eys_x86
src/LookingAt/API/: package.json
src/LookingAt/view/: package-lock.json  package.json
src/LookingAt/view/src/: App.js
src/Think/: README.md  docker-compose.yaml  package-lock.json
src/Think/Controller/: Dockerfile  server.js
src/Think/Dashboard/src/: App.css  App.js
src/Think/FrontalLobe/: Dockerfile  README.md  api.js  package-lock.json  package.json  server.js
src/Think/FrontalLobe/conf/: connectDb.js
src/Think/FrontalLobe/controllers/: PersonController.js
src/Think/Image/: server.js
src/Think/Memory/: docker-compose.yaml
src/Think/View/: package-lock.json  package.json
(+76 files in other folders)
